[package]
name = "my-cranelift-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.98.0"
cranelift-interpreter = "0.98.0"
cranelift-reader = "0.98.0"
target-lexicon = "0.12.10"

[dev-dependencies]
insta = "1.31.0"
